--- a/content/post/2021-10-04-reshaping-data-with-tidyr/index.en.Rmd
+++ b/content/post/2021-10-04-reshaping-data-with-tidyr/index.en.Rmd
@@ -31,6 +31,7 @@ dog_df <-  read_csv("dog_df.csv")
 space_dogs_df2  <-  read_csv("space_dogs_df2.csv")
 planet_df  <-  read_csv("planet_df.csv")
 planet_df2 <-  read_csv("planet_df2.csv")
+space_df <-  read_csv("space_df.csv")
 olympic <- readRDS("olympic_medals_top_10.rds")
 ```
 
@@ -498,7 +499,18 @@ RNA code
 Your goal for this exercise is to create a data frame with all possible three letter sequences (codons) from a vector with the four letters representing the RNA building blocks.
 
 ```{r}
+letters <- c("A", "C", "G", "U")
 
+# Create a tibble with all possible 3 way combinations
+codon_df <- expand_grid(
+  letter1 = letters,
+  letter2 = letters,
+  letter3 = letters
+)
+
+codon_df %>% 
+  # Unite these three columns into a "codon" column
+  unite("codon", letter1, letter2, letter3, sep = " ")
 ```
 
 ## 3-3 When did humans replace dogs in space?
@@ -508,7 +520,7 @@ You already know that in the early days of spaceflight, the USSR was testing roc
 Your goal is to create a plot that shows you the number of individuals sent into space per species. Before you can create this plot, you'll first have to introduce zero values for missing combinations of year and species.
 
 ```{r}
-
+full_df
 ```
 
 ## 3-4 Finding missing observations
@@ -518,7 +530,55 @@ You're an inspector at a nuclear plant and have to validate whether every reacto
 Two vectors, dates and reactors, with all dates of the year and reactors at the plant respectively have been created for you. You'll use the combination of the expand_grid() and anti_join() functions to find dates where particular reactors were not checked.
 
 ```{r}
+# Create a tibble with all combinations of years and species
+full_df <- expand_grid(
+    year = 1951:1970,   species = c("Human", "Dog"))
 
+full_df
+
+space_df %>% 
+  # Join with full_df so that missing values are introduced
+  right_join(full_df) %>% 
+  arrange(year)
+```
+```{r message=FALSE}
+space_df %>% 
+  # Join with full_df so that missing values are introduced
+  right_join(full_df) %>% 
+  arrange(year)
+```
+
+```{r}
+# Create a tibble with all combinations of years and species
+full_df <- expand_grid(
+  year = 1951:1970, 
+  species = c("Human", "Dog")
+)
+
+space_df %>% 
+  # Join with full_df so that missing values are introduced
+  right_join(full_df, by = c("year", "species")) %>% 
+  # Create a line plot with n_in_space over year, color by species
+  ggplot(aes(year, n_in_space, color= species)) +
+  geom_line()
+```
+
+
+```{r}
+# Create a tibble with all combinations of years and species
+full_df <- expand_grid(
+  year = 1951:1970, 
+  species = c("Human", "Dog")
+)
+
+space_df %>% 
+  # Join with full_df so that missing values are introduced
+  right_join(full_df, by = c("year", "species")) %>% 
+  # Overwrite NA values for n_in_space with 0L
+  replace_na(list(n_in_space = 0L)) %>% 
+  # Create a line plot with n_in_space over year, color by species
+  ggplot(aes(x = year, y = n_in_space, color = species)) +
+  geom_line()
 ```
 
 ## 3-6 Completing the Solar System
