--- a/content/post/2021-10-04-reshaping-data-with-tidyr/index.en.Rmd
+++ b/content/post/2021-10-04-reshaping-data-with-tidyr/index.en.Rmd
@@ -35,7 +35,9 @@ space_df <-  read_csv("space_df.csv")
 dates1 <-  read_csv("dates.csv")
 dates <- dates1$x
 reactor_df <-  read_csv("reactor_df.csv")
-olympic <- readRDS("olympic_medals_top_10.rds")
+planet_df3 <-  read_csv("planet_df3.csv")
+medal_df <- readRDS("olympic_medals_top_10.rds")
+cumul_nukes_1962_df <-  read_csv("cumul_nukes_1962_df.csv")
 ```
 
 
@@ -609,23 +611,69 @@ full_df %>%
 You have been given a data frame (planet_df) from the devstronomy project with the number of moons per planet in our Solar System. However, Mercury and Venus, the two moonless planets, are absent. You want to expand this dataset using the complete() function and a vector planets that contains all eight planet's names.
 
 ```{r}
+planet_df3
 
+planets = c("Mercury", "Venus", "Earth", "Mars", "Jupiter", "Saturn", "Uranus", "Neptune")
+
+planet_df3 %>% 
+  complete(
+    # Complete the planet variable
+    planet=planets,
+    # Overwrite NA values for n_moons with 0L
+    fill = list(n_moons = 0L)
+  )
 ```
+
+
+
 
 ## 3-7 Zero Olympic medals
 
 Since 1896, athletes from all over the world have been competing in the modern Olympic games. You've been given a dataset (medal_df) with observations for all medals won by athletes from the 10 most successful countries in Olympic history. You want to create a visual with the number of medals won per country (team) per year. However, since not all countries won medals each year, you'll have to introduce zero values before you can make an accurate visual.
 
 ```{r}
+medal_df
 
+medal_df %>% 
+  # Count the medals won per team and year
+  count(team, year, name = "n_medals") %>% 
+  # Plot n_medals over year, colored by team
+  ggplot(aes(year, n_medals, color=team)) +
+  geom_line() +
+  scale_color_brewer(palette = "Paired")
+```
+
+```{r}
+medal_df %>% 
+  # Count the medals won per team and year
+  count(team, year, name = "n_medals") %>% 
+  # Complete the team and year variables, fill n_medals with zeros
+  complete(team , year,
+     fill = list(n_medals = 0L)
+  ) %>% 
+  # Plot n_medals over year, colored by team
+  ggplot(aes(x = year, y = n_medals, color = team)) +
+  geom_line() +
+  scale_color_brewer(palette = "Paired")
 ```
 
 ## 3-8 Creating a sequence with full_seq()
 
 The full_seq() function will look for the minimal and maximal values inside the vector you pass it and will then generate a full sequence of numbers with a fixed period in between them. When used inside the complete() function, full_seq() is a handy tool to make sure there are no missing observations in your data. Before combining these two functions you'll generate a few sequences with full_seq() on its own to get the hang of this function.
 
-```{r}
+```{r include=FALSE, results='hide'}
+# Generate all years from 2020 to 2030
+years <- full_seq(c(2020 , 2030), period = 1)
+years
 
+# Generate all decades from 1980 to 2030
+decades <- full_seq(c(1980  , 2030), period = 10)
+decades
+
+outer_dates <- c(as.Date("1980-01-01"), as.Date("1980-12-31"))
+
+# Generate the dates for all days in 1980
+full_seq(outer_dates, period = 1)
 ```
 
 ## 3-9 The Cold War's hottest year
@@ -635,15 +683,54 @@ In October 1962, during the Cuban missile crisis, the world came close to a full
 You'll complete the dataset to hold the full sequence of dates, and visualize the total number of bombs per country over time. You'll also use the fill() function from Chapter One to impute missing values.
 
 ```{r}
-
+cumul_nukes_1962_df %>% 
+  # Complete the dataset
+  complete(country, date = full_seq(date, period = 1))
 ```
+
+```{r}
+cumul_nukes_1962_df %>% 
+  # Complete the dataset
+  complete(country, date = full_seq(date, period = 1)) %>% 
+  # Group the data by country
+  group_by(country) %>% 
+  # Impute missing values with the last known observation
+  fill(total_bombs)
+```
+
+```{r}
+cumul_nukes_1962_df %>% 
+  # Complete the dataset
+  complete(country, date = full_seq(date, period = 1)) %>% 
+  # Group the data by country
+  group_by(country) %>% 
+  # Impute missing values with the last known observation
+  fill(total_bombs) %>% 
+  # Plot the number of bombs over time, color by country
+  ggplot(aes(date, total_bombs, color=country)) +
+  # These two lines will mark the Cuban Missile Crisis 
+  geom_rect(xmin = as.Date("1962-10-16"), xmax = as.Date("1962-10-29"), ymin = -Inf, ymax = Inf, color = NA)+ 
+  geom_text(x = as.Date("1962-10-22"), y = 15, label = "Cuban Missile Crisis", angle = 90, color = "white")+
+  geom_line()
+```
+
 
 ## 3-11 Olympic medals per continent
 
 You want to compare Olympic performance of athletes per continent over time, both on the winter and summer Olympics. You've been given a dataset medal_df with the average number of medals won per participant of each continent since 1928. You'll complete this data to introduce zero values for years where a continent did not win any medals.
 
 ```{r}
-
+medal_df %>% 
+  # Give each continent an observation at each Olympic event
+  complete(
+    continent, 
+    nesting(season, year), 
+    fill = list(medals_per_participant = 0)
+  ) %>%
+  # Plot the medals_per_participant over time, colored by continent
+  ggplot(aes(x = year, y = medals_per_participant, color = continent)) +
+  geom_line() +
+  facet_grid(season ~ .)
 ```
 
 ## 3-12 Tracking a virus outbreak
@@ -651,7 +738,9 @@ You want to compare Olympic performance of athletes per continent over time, bot
 You're a doctor in a remote village confronted with a virus outbreak. You have been collecting data on when your patients got infected and recovered in a data frame named patient_df. Your goal is to create a visual with the number of sick patients over time. You'll first have to reshape the data so that you can count the number of sick patients per day.
 
 ```{r}
-
+patient_df %>% 
+  # Pivot the infected and recovered columns to long format
+  pivot_longer(c(infected, recovered), names_to= "status", values_to= "date")
 ```
 
 ## 3-13 Counting office occupants
