--- a/content/post/2021-10-04-reshaping-data-with-tidyr/index.en.Rmd
+++ b/content/post/2021-10-04-reshaping-data-with-tidyr/index.en.Rmd
@@ -858,7 +858,9 @@ movie_list
 movie_planets_list
 
 # Create a movie column from the movie_list
-tibble(movie=movie_list)
+tibble(movie = movie_list) %>% 
+  # Unnest the movie column
+  unnest_wider(movie)
 ```
 
 
